Changed Audrey path

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: Audrey;
-	src: url('fonts/Audrey/Audrey-Normal.otf');
+	src: url('../website-v1/fonts/Audrey/Audrey-Normal.otf');
 }
 
 html,
